# Multid_RF_SpinDomain

./: EXPre_fake_maps.py  EX_pulse_design.py  EX_pulse_design_2d.py  EX_pulse_design_3d.py  EX_pulse_design_sms.py  EX_simu_compare.py  EX_transverse_rotation_illustration.py  LICENSE  README.md  demo1_spindomain_simulation.ipynb  demo_Design3dRefocusing.py  demo_excitation.py  demo_refocusing.py  demo_refocusing_newinit.py  design_3dpulses.py  experiments.sh  experiments_additional.sh  experiments_demo.sh  illustration_transverse_rotation.py  init_zoomedmri_7x7x6_ex.mat  mri.py  mriopt.py  mripulse.py  mritrajectory.py  mriutils.py  pyproject.toml  simulator_perf.sh  simulator_perf_plot.py  simulator_performance.py  utils.py
EX_results/: readme.md
backups/: mri.py
data/: phantom_b0_1.mat  phantom_b0_2.mat  phantom_b0_3.mat  phantom_b0_4.mat  phantom_b1_1.mat  phantom_b1_2sim.mat  phantom_b1_3sim.mat  phantom_mask.mat  pulse_init_3d.mat  pulse_init_spins_4ms.mat
demos/: demo1_spindomain_simulation.ipynb  demo2_calculating_derivatives.ipynb  demo3_3DRF_optimization.ipynb
experimentsData/: phantom_b0_1.npy  phantom_b0_2.npy  phantom_b0_3.npy  phantom_b0_4.npy  phantom_b1_1.npy  phantom_b1_2.npy  phantom_b1_3.npy  phantom_mask.npy  pulse3d_gr_init.npy  pulse3d_rf_init.npy
mri_logs/: demo_cube.mat  mri_log_demo_ov90init.mat  readme.md  slr_excitation.mat  slr_inversion.mat  slr_inversion2.mat  slr_inversion3.mat  slr_inversion4.mat  slr_refocusing.mat  slr_refocusing2.mat
mritools/: MRData.py  __init__.py  mri.py  mripulseOPT.py
outputs/: readme.md
(+28 files in other folders)
