[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "sdrf"
version = "0.0.2"
authors = [
  { name="Jiayao Yang", email="jiayao@umich.edu" }
]
description = "A package for spin domain refocusing and excitation RF pulse optimization."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/MIITT-MRI-Jianglab/Multid_RF_SpinDomain"